tests/paczka2/big_fuzzy/21098163.err
Error in line 7: A230 A263 26,7
Error in line 25: sV6zx A968 69,3
Error in line 26: sV6zx A677 90,8
Error in line 27: sV6zx A968 96,0
Error in line 28: 4O5kokq A263 10,0
Error in line 34: fAX A968 32,1
Error in line 36: A230 A677 48,5
Error in line 30: 4O5kokq A677 53,6
Error in line 49: sV6zx A263 17,2
Error in line 56: sV6zx A677 92,9
Error in line 57: sV6zx A230 67,6
Error in line 77: sV6zx A677 -1,6
Error in line 75: sV6zx A677 38,8
Error in line 83: 4O5kokq A263 252,:
Error in line 81: sV6zx A230 57,7
Error in line 91: fAX A677 74,0
Error in line 74: 4O5kokq A263 70,8
Error in line 95: 4O5kokq A968 53,9
Error in line 98: 4O5kokq A263 89,0
Error in line 115: sV6zx A677 80,3
Error in line 119: F2uZAXl A263 3,5
Error in line 120: F2uZAXl A968 70,6
Error in line 117: kkw1h A230 1,6
Error in line 122: A230 A230 47,3
Error in line 128: fAX A677 2,3
Error in line 126: kkw1h A263 97,9
Error in line 136: 4O5kokq A263 47,3
Error in line 125: sV6zx A968 155,0
Error in line 165: fAX A230 90,7
Error in line 166: fAX A968 69,6
Error in line 167: sV6zx A677 126,3
Error in line 186: sV_zx A2_3 2_,2
Error in line 189: fAX A677 48,4
Error in line 193: kkw1h A263 75,3
Error in line 201: t3wrhAx7S A968 0,3
Error in line 199: sV6zx A677 44,3
Error in line 210: fAX A677 176,0
Error in line 217: F2uZAXl A968 38,2
Error in line 218: A230 A677 92,7
Error in line 224: F2uZAXl A263 56,0
Error in line 222: fAX A968 32,3
Error in line 230: sV6zx A968 85,4
Error in line 236: 4O5kokq A230 43,2
Error in line 240: fAX A23 9,8
